# libmad

./: .gitignore  .gitmodules  CMakeLists.txt  Manifest.toml  Project.toml  README.md  meson.build  verifier_errors.txt  verifier_errors1.txt
.github/workflows/: build_dist.yml  publish.yml
examples/: basic_problem.c  build.sh  no_hsl_example.c
scripts/: generate_headers.jl  get_all_meths.jl  test_opts.jl  test_tuple_symbol.jl
src/: libMad.jl  madnlp.jl  nlpmodels.jl  options.jl  qpmodels.jl  recipe.jl  solver.jl  stats.jl  utils.jl
src/madnlp/: stats.jl  workload.jl  workload_precomp.jl
